; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/otus/80211core/extr_cmmsta.c_zfStaAddIePowerCap.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/otus/80211core/extr_cmmsta.c_zfStaAddIePowerCap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ZM_WLAN_EID_POWER_CAPABILITY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @zfStaAddIePowerCap(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load i32*, i32** %4, align 8
  %10 = call i32 @zmw_get_wlan_dev(i32* %9)
  %11 = load i32*, i32** %4, align 8
  %12 = load i32*, i32** %5, align 8
  %13 = load i32, i32* %6, align 4
  %14 = add nsw i32 %13, 1
  store i32 %14, i32* %6, align 4
  %15 = load i32, i32* @ZM_WLAN_EID_POWER_CAPABILITY, align 4
  %16 = call i32 @zmw_tx_buf_writeb(i32* %11, i32* %12, i32 %13, i32 %15)
  %17 = load i32*, i32** %4, align 8
  %18 = load i32*, i32** %5, align 8
  %19 = load i32, i32* %6, align 4
  %20 = add nsw i32 %19, 1
  store i32 %20, i32* %6, align 4
  %21 = call i32 @zmw_tx_buf_writeb(i32* %17, i32* %18, i32 %19, i32 2)
  %22 = load i32*, i32** %4, align 8
  %23 = call i32 @zfHpGetMinTxPower(i32* %22)
  %24 = sdiv i32 %23, 2
  %25 = sext i32 %24 to i64
  store i64 %25, i64* %8, align 8
  %26 = load i32*, i32** %4, align 8
  %27 = call i32 @zfHpGetMaxTxPower(i32* %26)
  %28 = sdiv i32 %27, 2
  %29 = sext i32 %28 to i64
  store i64 %29, i64* %7, align 8
  %30 = load i32*, i32** %4, align 8
  %31 = load i32*, i32** %5, align 8
  %32 = load i32, i32* %6, align 4
  %33 = add nsw i32 %32, 1
  store i32 %33, i32* %6, align 4
  %34 = load i64, i64* %8, align 8
  %35 = call i32 @zmw_tx_buf_writeh(i32* %30, i32* %31, i32 %32, i64 %34)
  %36 = load i32*, i32** %4, align 8
  %37 = load i32*, i32** %5, align 8
  %38 = load i32, i32* %6, align 4
  %39 = add nsw i32 %38, 1
  store i32 %39, i32* %6, align 4
  %40 = load i64, i64* %7, align 8
  %41 = call i32 @zmw_tx_buf_writeh(i32* %36, i32* %37, i32 %38, i64 %40)
  %42 = load i32, i32* %6, align 4
  ret i32 %42
}

declare dso_local i32 @zmw_get_wlan_dev(i32*) #1

declare dso_local i32 @zmw_tx_buf_writeb(i32*, i32*, i32, i32) #1

declare dso_local i32 @zfHpGetMinTxPower(i32*) #1

declare dso_local i32 @zfHpGetMaxTxPower(i32*) #1

declare dso_local i32 @zmw_tx_buf_writeh(i32*, i32*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
